apps/edu-rag-bot/chromadb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chromadb-svc
  namespace: edu-rag-bot
spec:
  selector:
    app: chromadb
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: chromadb
  namespace: edu-rag-bot
spec:
  serviceName: "chromadb-svc"
  replicas: 1
  selector:
    matchLabels:
      app: chromadb
  template:
    metadata:
      labels:
        app: chromadb
    spec:
      containers:
        - name: chromadb
          image: chromadb/chroma:0.4.24
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: chroma-data
              mountPath: /chroma/chroma
  volumeClaimTemplates:
    - metadata:
        name: chroma-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
