apps/edu-rag-bot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-backend
  labels:
    app: rag-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-backend
  template:
    metadata:
      labels:
        app: rag-backend
    spec:
      containers:
        - name: backend
          image: crpi-he7mqvhihpnvi08o.cn-shanghai.personal.cr.aliyuncs.com/my-rag-project/rag-service:71d393df0ad1b4fa84659a593e7822ae634a5014
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: rag-backend-svc
  namespace: edu-rag-bot
  labels: 
    app: rag-backend
spec:
  selector:
    app: rag-backend
  ports:
    - name: http-metrics
      protocol: TCP
      port: 80
      targetPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-frontend
  labels:
    app: rag-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-frontend
  template:
    metadata:
      labels:
        app: rag-frontend
    spec:
      containers:
        - name: frontend
          image: crpi-he7mqvhihpnvi08o.cn-shanghai.personal.cr.aliyuncs.com/my-rag-project/rag-service:71d393df0ad1b4fa84659a593e7822ae634a5014
          imagePullPolicy: Always
          command: ["python", "ui.py"]
          ports:
            - containerPort: 7860
---
apiVersion: v1
kind: Service
metadata:
  name: rag-frontend-svc
spec:
  selector:
    app: rag-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7860
