apps/edu-rag-bot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rag-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: rag.weiye.local
    http:
      paths:
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: rag-backend-svc
            port:
              number: 80
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: rag-frontend-svc
            port:
              number: 80
